--- a/finance_project.ipynb
+++ b/finance_project.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finance Data Project\n",
+    "# Finance Data Project (1st attempt)\n",
     "We'll focus on bank stocks and see how they progressed throughout the [financial crisis](https://en.wikipedia.org/wiki/Financial_crisis_of_2007%E2%80%9308) all the way to early 2016."
    ]
   },
@@ -2346,6 +2346,144 @@
    ],
    "source": [
     "bank_stocks.xs(key='Close', axis=1, level='Stock Info').max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a new data frame which contains returns for each bank stocks.\n",
+    "\n",
+    "$$r_t = \\frac{p_t - p_{t-1}}{p_{t-1}} = \\frac{p_t}{p_{t-1}} - 1$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "returns = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BAC Return</th>\n",
+       "      <th>C Return</th>\n",
+       "      <th>GS Return</th>\n",
+       "      <th>JPM Return</th>\n",
+       "      <th>MS Return</th>\n",
+       "      <th>WFC Return</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2006-01-03</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-04</th>\n",
+       "      <td>-0.010620</td>\n",
+       "      <td>-0.018462</td>\n",
+       "      <td>-0.013812</td>\n",
+       "      <td>-0.014183</td>\n",
+       "      <td>0.000686</td>\n",
+       "      <td>-0.011599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-05</th>\n",
+       "      <td>0.001288</td>\n",
+       "      <td>0.004961</td>\n",
+       "      <td>-0.000393</td>\n",
+       "      <td>0.003029</td>\n",
+       "      <td>0.002742</td>\n",
+       "      <td>-0.001110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-06</th>\n",
+       "      <td>-0.001501</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.014169</td>\n",
+       "      <td>0.007046</td>\n",
+       "      <td>0.001025</td>\n",
+       "      <td>0.005874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2006-01-09</th>\n",
+       "      <td>0.000644</td>\n",
+       "      <td>-0.004731</td>\n",
+       "      <td>0.012030</td>\n",
+       "      <td>0.016242</td>\n",
+       "      <td>0.010586</td>\n",
+       "      <td>-0.000158</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            BAC Return  C Return  GS Return  JPM Return  MS Return  WFC Return\n",
+       "Date                                                                          \n",
+       "2006-01-03         NaN       NaN        NaN         NaN        NaN         NaN\n",
+       "2006-01-04   -0.010620 -0.018462  -0.013812   -0.014183   0.000686   -0.011599\n",
+       "2006-01-05    0.001288  0.004961  -0.000393    0.003029   0.002742   -0.001110\n",
+       "2006-01-06   -0.001501  0.000000   0.014169    0.007046   0.001025    0.005874\n",
+       "2006-01-09    0.000644 -0.004731   0.012030    0.016242   0.010586   -0.000158"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for tick in tickers:\n",
+    "    returns[tick+' Return'] = bank_stocks[tick]['Close'].pct_change()\n",
+    "returns.head()"
    ]
   },
   {
