Finance Data Analysis

--- a/finance_project.ipynb
+++ b/finance_project.ipynb
@@ -2373,6 +2373,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's talk about logic here.\n",
+    "We want daily percent changes in every bank stock. How can we do that?\n",
+    "First of all, we need to get data on the attribute 'Close' of each bank. Because that will give us a return on each stock. Now we have to compare every day's stock value to its previous value because we want to see changes in it. To see the percent change in stock every day, we need to use the pct_change function.\n",
+    "So we can do two things.\n",
+    "1) First, we can create return columns for every bank stock in the returns data frame and then populate the values.\n",
+    "2) Second, we can create new columns in the for loop and populate the data at the same time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
