Finance Data Analysis

--- a/finance_project.ipynb
+++ b/finance_project.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "First we need to start with the proper imports, which we've already laid out for you here.\n",
     "\n",
-    "*Note: [You'll need to install pandas-datareader for this to work!](https://github.com/pydata/pandas-datareader) Pandas datareader allows you to [read stock information directly from the internet](http://pandas.pydata.org/pandas-docs/stable/remote_data.html) Use these links for install guidance (**pip install pandas-datareader**), or just follow along with the video lecture.*\n"
+    "Import data using **yfinance**\n"
    ]
   },
   {
